--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,12 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
     font-family: "Source Sans Pro";
-    font-size: 40pt;
+    text-align:center;
+}
+
+
+ h1 {
+    font size: 40pt;
 }
 
 
@@ -28,4 +33,9 @@ header {
 
 #footer {
     text-align: left;
+}
+
+#hobbies ul li {
+    color:#376BA6;
+    border: 2px solid #376BA6;
 }
