--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ h1, h2, h3, h4, h5, h6 {
 
 
  h1 {
-    font size: 40pt;
+    font-size: 40pt;
 }
 
 
@@ -22,11 +22,11 @@ header {
 #hero {
     text-align: center;
 }
-
+/* Hero Section */
 #hero img {
     width: 450px;
 }
-
+/* Bio Section */
 #bio {
     text-align: center;
 }
@@ -34,8 +34,22 @@ header {
 #footer {
     text-align: left;
 }
-
+/* Hobby Section */
 #hobbies ul li {
     color:#376BA6;
     border: 2px solid #376BA6;
 }
+
+/*Gallery*/
+#gallery {
+    border: 3px solid #376BA6
+}
+
+#gallery img {
+    max-width:100%;
+}
+
+#gallery figure {
+    text-align: center;
+}
+
