--- a/css/style.css
+++ b/css/style.css
@@ -38,11 +38,13 @@ header {
 #hobbies ul li {
     color:#376BA6;
     border: 2px solid #376BA6;
+    margin-bottom:1rem;
 }
 
 /*Gallery*/
 #gallery {
-    border: 3px solid #376BA6
+    border: 3px solid #376BA6;
+    margin-bottom:2rem
 }
 
 #gallery img {
@@ -52,4 +54,10 @@ header {
 #gallery figure {
     text-align: center;
 }
+
+/*Literature*/
+#lit {
+    border:3px solid #376BA6;
+}
+
 
