--- a/css/nav.css
+++ b/css/nav.css
@@ -4,10 +4,10 @@ html {
     scroll-behavior: smooth;
 }
 
-/* 
- get rid of padding & sizing on body so
- header is at top
-*/
+
+ /*get rid of padding & sizing on body so
+ header is at top*/
+
 
 body {
     box-sizing: border-box;
@@ -17,7 +17,7 @@ body {
 
 /* add some padding back to rest of page */
 
-main{
+main {
     padding: 2vw;
 }
 
@@ -29,10 +29,21 @@ main{
     color: azure;
     display: flex;
     flex-direction: column;
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
 }
 
 /* logo */
+.logo {
+    display: flex;
+    align-items:center;
 
+}
+
+.logo img {
+    height: 4vw;
+    width: 4vw;
+}
 
 
 /* navigation list */
@@ -50,5 +61,4 @@ main{
 /* 
 media query for non-mobile nav bar
 min-width set to width of nav elements 
-such that no text wraps 
-*/
+such that no text wraps*/
